<resources>
    <string name="app_name">Home Assistant</string>

    <string name="lbl_bluetooth_permission_rationale_title">Enable bluetooth permission</string>
    <string name="lbl_bluetooth_permission_rationale_message">Please enable bluetooth permission from app settings in order to receive data from the device</string>

    <string name="lbl_bluetooth_status_rationale_title">Turn bluetooth on</string>
    <string name="lbl_bluetooth_status_rationale_message">Please turn bluetooth on in order to receive data from the device</string>

    <string name="lbl_location_permission_rationale_title">Enable location permission</string>
    <string name="lbl_location_permission_rationale_message">Please enable location permission from app settings in order to see the weather data</string>

    <string name="lbl_notifications_permission_rationale_title">Enable notifications permission</string>
    <string name="lbl_notifications_permission_rationale_message">Please enable notifications permission from app settings in order to receive useful notifications.</string>

    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_settings">Settings</string>

    <string name="lbl_today">Today</string>
    <string name="lbl_five_days_weather">5 Days Weather</string>
    <string name="lbl_air_quality">Air Quality</string>
    <string name="lbl_weather_records">Weather Records</string>
    <string name="lbl_air_quality_records">Air Quality Records</string>
    <string name="lbl_device_management">Device Management</string>
    <string name="lbl_add_device">Add device</string>

    <string name="lbl_empty_bluetooth_device_name">No specified name</string>
    <string name="lbl_your_paired_devices">Your paired devices</string>
    <string name="lbl_available_devices">Available devices</string>
    <string name="msg_select_available_device">Click on one of the available devices to start pairing with it.</string>
    <string name="msg_select_paired_device">Click on one of the already paired devices to use it as primary device.</string>
    <string name="msg_no_paired_device">You have no paired device.\nAdd a new device in order to use it.</string>
    <string name="msg_device_is_paired">Device paired successfully.</string>

    <string name="lbl_settings_title_time">Time</string>
    <string name="lbl_settings_title_units">Units</string>
    <string name="lbl_settings_title_notifications">Notifications</string>

    <string name="lbl_settings_tab_am_pm">AM/PM</string>
    <string name="lbl_settings_tab_temperature">Temperature</string>
    <string name="lbl_settings_tab_speed">Speed</string>
    <string name="lbl_settings_tab_pressure">Pressure</string>
    <string name="lbl_settings_tab_notifications">Show notifications</string>

    <string name="lbl_unit_celsius">Celsius</string>
    <string name="lbl_unit_fahrenheit">Fahrenheit</string>
    <string name="lbl_unit_kelvin">Kelvin</string>

    <string name="lbl_unit_meters_per_second">m/s</string>
    <string name="lbl_unit_kilometers_per_hour">km/h</string>
    <string name="lbl_unit_miles_per_hour">m/h</string>
    <string name="lbl_unit_knots">kn</string>

    <string name="lbl_unit_hpa">hPa</string>
    <string name="lbl_unit_kpa">kPa</string>
    <string name="lbl_unit_mmHg">mmHg</string>
    <string name="lbl_unit_inHg">inHg</string>

    <string name="lbl_unit_value_celsius">%.2f °C</string>
    <string name="lbl_unit_value_fahrenheit">%.2f °F</string>
    <string name="lbl_unit_value_kelvin">%.2f °K</string>

    <string name="lbl_unit_value_meters_per_second">%.2f m/s</string>
    <string name="lbl_unit_value_kilometers_per_hour">%.2f km/h</string>
    <string name="lbl_unit_value_miles_per_hour">%.2f m/h</string>
    <string name="lbl_unit_value_knots">%.2f kn</string>

    <string name="lbl_unit_value_hpa">%d hPa</string>
    <string name="lbl_unit_value_kpa">%d kPa</string>
    <string name="lbl_unit_value_mmHg">%d mmHg</string>
    <string name="lbl_unit_value_inHg">%d inHg</string>

    <string name="lbl_hour_format_am_pm">hh:mm aa</string>
    <string name="lbl_hour_format">HH:mm</string>

    <string name="lbl_card_title_sensor_data">Sensor Data</string>
    <string name="lbl_card_field_sensor_temperature">Sensor temperature: %s</string>
    <string name="lbl_card_field_sensor_humidity">Sensor humidity: %d%%</string>

    <string name="lbl_card_title_current_weather">Current Weather</string>
    <string name="lbl_card_field_current_temperature_title">Current temperature</string>
    <string name="lbl_card_field_temperature">Temperature: %s</string>
    <string name="lbl_card_field_feels_like_title">Feels like</string>
    <string name="lbl_card_field_feels_like">Feels like %s</string>
    <string name="lbl_card_field_min_temperature">Min: %s</string>
    <string name="lbl_card_field_max_temperature">Max: %s</string>

    <string name="lbl_card_title_weather_measurements">Weather Measurements</string>
    <string name="lbl_card_field_pressure">Pressure: %s</string>
    <string name="lbl_card_field_humidity">Humidity: %d%%</string>
    <string name="lbl_card_field_visibility">Visibility: %d</string>
    <string name="lbl_card_field_wind_speed">Wind: %s</string>

    <string name="lbl_card_title_weather_details">Weather Details</string>
    <string name="lbl_card_field_city">City: %s</string>
    <string name="lbl_card_field_cloudiness">Cloudiness: %d%%</string>
    <string name="lbl_card_field_precipitation">Precipitation: %.0f%%</string>
    <string name="lbl_card_field_sunrise">Sunrise: %s</string>
    <string name="lbl_card_field_sunset">Sunset: %s</string>

    <string name="lbl_card_title_air_quality">Air Quality</string>
    <string name="lbl_card_field_quality_index">Quality index: %d (%s)</string>
    <string name="lbl_card_field_carbon_monoxide">Carbon monoxide: %.2f (%s)</string>
    <string name="lbl_card_field_fine_particles">Fine particles: %.2f (%s)</string>
    <string name="lbl_card_field_coarse_particles">Coarse particles: %.2f (%s)</string>

    <string name="lbl_quality_good">Good</string>
    <string name="lbl_quality_fair">Fair</string>
    <string name="lbl_quality_moderate">Moderate</string>
    <string name="lbl_quality_poor">Poor</string>
    <string name="lbl_quality_very_poor">Very Poor</string>

    <string name="lbl_formula_carbon_monoxide">CO</string>
    <string name="lbl_formula_nitrogen_monoxide">NO</string>
    <string name="lbl_formula_nitrogen_dioxide">NO2</string>
    <string name="lbl_formula_ozone">O3</string>
    <string name="lbl_formula_sulphur">SO2</string>
    <string name="lbl_formula_ammonia">NH3</string>
    <string name="lbl_formula_fine_particles">PM2.5</string>
    <string name="lbl_formula_coarse_particles">PM10</string>

    <string name="lbl_carbon_monoxide">Carbon Monoxide (CO)</string>
    <string name="lbl_nitrogen_monoxide">Nitrogen Monoxide (NO)</string>
    <string name="lbl_nitrogen_dioxide">Nitrogen Dioxide (NO2)</string>
    <string name="lbl_ozone">Ozone (O3)</string>
    <string name="lbl_sulphur">Sulphur Dioxide (SO2)</string>
    <string name="lbl_ammonia">Ammonia (NH3)</string>
    <string name="lbl_fine_particles">Fine Particles (PM2.5)</string>
    <string name="lbl_coarse_particles">Coarse Particles (PM10)</string>

    <string name="lbl_air_quality_good_index">Good: 1</string>
    <string name="lbl_air_quality_fair_index">Fair: 2</string>
    <string name="lbl_air_quality_moderate_index">Moderate: 3</string>
    <string name="lbl_air_quality_poor_index">Poor: 4</string>
    <string name="lbl_air_quality_very_poor_index">Very poor: 5</string>

    <string name="lbl_carbon_monoxide_good_range">Good: 0–4400</string>
    <string name="lbl_carbon_monoxide_fair_range">Fair: 4400–9400</string>
    <string name="lbl_carbon_monoxide_moderate_range">Moderate: 9400–12400</string>
    <string name="lbl_carbon_monoxide_poor_range">Poor: 12400–15400</string>
    <string name="lbl_carbon_monoxide_very_poor_range">Very poor: >15400</string>

    <string name="lbl_nitrogen_monoxide_good_range">Good: 0–25</string>
    <string name="lbl_nitrogen_monoxide_fair_range">Fair: 25–50</string>
    <string name="lbl_nitrogen_monoxide_moderate_range">Moderate: 50–75</string>
    <string name="lbl_nitrogen_monoxide_poor_range">Poor: 75–100</string>
    <string name="lbl_nitrogen_monoxide_very_poor_range">Very poor: >100</string>

    <string name="lbl_nitrogen_dioxide_good_range">Good: 0–40</string>
    <string name="lbl_nitrogen_dioxide_fair_range">Fair: 40–70</string>
    <string name="lbl_nitrogen_dioxide_moderate_range">Moderate: 70–150</string>
    <string name="lbl_nitrogen_dioxide_poor_range">Poor: 150–200</string>
    <string name="lbl_nitrogen_dioxide_very_poor_range">Very poor: >200</string>

    <string name="lbl_ozone_good_range">Good: 0–60</string>
    <string name="lbl_ozone_fair_range">Fair: 60–100</string>
    <string name="lbl_ozone_moderate_range">Moderate: 100–140</string>
    <string name="lbl_ozone_poor_range">Poor: 140–180</string>
    <string name="lbl_ozone_very_poor_range">Very poor: >180</string>

    <string name="lbl_sulphur_dioxide_good_range">Good: 0–20</string>
    <string name="lbl_sulphur_dioxide_fair_range">Fair: 20–80</string>
    <string name="lbl_sulphur_dioxide_moderate_range">Moderate: 80–250</string>
    <string name="lbl_sulphur_dioxide_poor_range">Poor: 250–350</string>
    <string name="lbl_sulphur_dioxide_very_poor_range">Very poor: >350</string>

    <string name="lbl_ammonia_good_range">Good: 0–20</string>
    <string name="lbl_ammonia_fair_range">Fair: 20–50</string>
    <string name="lbl_ammonia_moderate_range">Moderate: 50–100</string>
    <string name="lbl_ammonia_poor_range">Poor: 100–200</string>
    <string name="lbl_ammonia_very_poor_range">Very poor: >200</string>

    <string name="lbl_fine_particles_good_range">Good: 0–10</string>
    <string name="lbl_fine_particles_fair_range">Fair: 10–25</string>
    <string name="lbl_fine_particles_moderate_range">Moderate: 25–50</string>
    <string name="lbl_fine_particles_poor_range">Poor: 50–75</string>
    <string name="lbl_fine_particles_very_poor_range">Very poor: >75</string>

    <string name="lbl_coarse_particles_good_range">Good: 0–20</string>
    <string name="lbl_coarse_particles_fair_range">Fair: 20–50</string>
    <string name="lbl_coarse_particles_moderate_range">Moderate: 50–100</string>
    <string name="lbl_coarse_particles_poor_range">Poor: 100–200</string>
    <string name="lbl_coarse_particles_very_poor_range">Very poor: >200</string>

    <string name="lbl_quality_card_current_index">Current value: %d (%s)</string>
    <string name="lbl_quality_card_current_value">Current value: %.2f (%s)</string>

    <string name="lbl_record_date_format">EEE, d MMM yyyy</string>
    <string name="lbl_chart_date_format">dd.MM</string>

    <string name="lbl_float_format">%.2f</string>

    <string name="lbl_notification_title">Records Updated!</string>
    <string name="lbl_notification_message">Your Weather and Air Quality history records were updated! Open the app to check them!</string>
    <string name="lbl_notification_channel_name">Notification channel</string>
    <string name="lbl_notification_description">Notification for informing the user when the database is updated.</string>

</resources>
