<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:title="@string/lbl_today"
            android:icon="@drawable/ic_calendar"/>

        <item
            android:id="@+id/nav_five_days_weather"
            android:title="@string/lbl_five_days_weather"
            android:icon="@drawable/ic_weather"/>

        <item
            android:id="@+id/nav_air_quality"
            android:title="@string/lbl_air_quality"
            android:icon="@drawable/ic_air_quality"/>

        <item
            android:id="@+id/nav_weather_records"
            android:title="@string/lbl_weather_records"
            android:icon="@drawable/ic_statistics"/>

        <item
            android:id="@+id/nav_air_quality_records"
            android:title="@string/lbl_air_quality_records"
            android:icon="@drawable/ic_statistics"/>

        <item
            android:id="@+id/nav_device_management"
            android:title="@string/lbl_device_management"
            android:icon="@drawable/ic_bluetooth"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/lbl_settings"
            android:icon="@drawable/ic_settings"/>
    </group>

</menu>
