<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_settings_title_time"
        android:textSize="16sp" />

    <include layout="@layout/settings_divider" />

    <include
        android:id="@+id/hour_format_tab"
        layout="@layout/settings_tab_switch" />

    <include layout="@layout/settings_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_settings_title_units"
        android:textSize="16sp" />

    <include layout="@layout/settings_divider" />

    <include
        android:id="@+id/temperature_tab"
        layout="@layout/settings_tab_option" />

    <include layout="@layout/settings_divider" />

    <include
        android:id="@+id/speed_tab"
        layout="@layout/settings_tab_option" />

    <include layout="@layout/settings_divider" />

    <include
        android:id="@+id/pressure_tab"
        layout="@layout/settings_tab_option" />

    <include layout="@layout/settings_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_settings_title_notifications"
        android:textSize="16sp" />

    <include layout="@layout/settings_divider" />

    <include
        android:id="@+id/notifications_tab"
        layout="@layout/settings_tab_switch" />

    <include layout="@layout/settings_divider" />

</LinearLayout>
