<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    app:strokeColor="?attr/colorOutline"
    app:strokeWidth="1.5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/card_weather_measurements_click"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/separator"/>

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/lbl_card_title_weather_measurements"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/card_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/ic_measurements"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginVertical="40dp"
            android:background="?attr/colorOutline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:drawablePadding="10dp"
            android:text="@string/lbl_card_field_pressure"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/text_bullet"
            app:layout_constraintBottom_toTopOf="@id/current_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/current_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:drawablePadding="10dp"
            android:text="@string/lbl_card_field_humidity"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/text_bullet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_pressure" />

        <TextView
            android:id="@+id/current_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:drawablePadding="10dp"
            android:text="@string/lbl_card_field_visibility"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/text_bullet"
            app:layout_constraintBottom_toTopOf="@id/current_wind_speed"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/current_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:drawablePadding="10dp"
            android:text="@string/lbl_card_field_wind_speed"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/text_bullet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/current_visibility" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
